added css added home link

--- a/viewer.html
+++ b/viewer.html
@@ -6,8 +6,10 @@
     <style>
         body { margin: 0; }
     </style>
+    <link rel="stylesheet" href="viewer.css">
 </head>
 <body>
 <script type="module" src="/viewer.js"></script>
+<a href="index.html" id="homeLink"></a>
 </body>
 </html>
