--- a/viewer.html
+++ b/viewer.html
@@ -1,3 +1,9 @@
+<!--AUTHOR:     RORY FARRELL-->
+<!--CREATED DATE:      22/07/2025-->
+<!-- DESCRIPTION:      HTML FOR THE VIEWER PAGE-->
+<!--REVISION HISTORY:
+                       23/07: Added basic file loading functionality from /modules folder-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +16,6 @@
 </head>
 <body>
 <script type="module" src="/viewer.js"></script>
-<a href="index.html" id="homeLink"></a>
+<a href="index.html" id="homeLink">Home</a>
 </body>
 </html>
