--- a/index.html
+++ b/index.html
@@ -2,21 +2,103 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Model Viewer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Model Selector</title>
     <link rel="stylesheet" href="styles.css" />
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .container {
+            display: flex;
+            gap: 20px;
+            padding: 20px;
+        }
+
+        .model-list {
+            display: grid;
+            grid-template-columns: repeat(4, 100px);
+            gap: 10px;
+            overflow-y: auto;
+            max-height: 500px;
+        }
+
+        .model-card {
+            width: 100px;
+            height: 100px;
+            border: 2px solid #333;
+            border-radius: 12px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            cursor: pointer;
+        }
+
+        .model-card.empty {
+            background-color: #eee;
+            pointer-events: none;
+        }
+
+        .model-card.add-model {
+            font-weight: bold;
+            font-size: 18px;
+        }
+
+        .preview-area {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            border: 2px solid #333;
+            border-radius: 16px;
+            padding: 20px;
+            min-width: 400px;
+        }
+
+        #preview {
+            flex: 1;
+            text-align: center;
+        }
+
+        #model-name {
+            font-weight: bold;
+            margin-bottom: 8px;
+            font-size: 18px;
+        }
+
+        #previewCanvas {
+            width: 100%;
+            height: 300px;
+            display: block;
+            background: #f0f0f0;
+            border-radius: 8px;
+        }
+
+        #view-btn {
+            margin-top: 20px;
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 8px;
+            border: 2px solid #333;
+            cursor: pointer;
+        }
+
+        #view-btn:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
     <div class="model-list">
-        <!-- Models go here -->
+        <!-- Add your models here -->
         <div class="model-card" data-model="Shiba" data-path="models/shiba.glb">Shiba</div>
         <div class="model-card" data-model="Crab" data-path="models/crab.glb">Crab</div>
 
-        <!-- More empty slots -->
-        <div class="model-card empty"></div>
-        <div class="model-card empty"></div>
-        <div class="model-card empty"></div>
+        <!-- Empty placeholders -->
         <div class="model-card empty"></div>
         <div class="model-card empty"></div>
         <div class="model-card empty"></div>
@@ -26,42 +108,46 @@
         <div class="model-card empty"></div>
         <div class="model-card empty"></div>
 
-        <!-- Add Model Button -->
+        <!-- Add model button -->
         <div class="model-card add-model">+<br/>Add Model</div>
     </div>
 
     <div class="preview-area">
         <div id="preview">
-            <p>Select a model to preview it here.</p>
+            <div id="model-name">Select a model</div>
+            <canvas id="previewCanvas" width="400" height="300"></canvas>
         </div>
         <button id="view-btn" disabled>View Model</button>
     </div>
 </div>
 
-<script>
+<!-- Three.js preview logic -->
+<script type="module" src="preview.js"></script>
+
+<!-- Main index logic -->
+<script type="module">
+    import { loadPreviewModel } from './preview.js';
+
     const modelCards = document.querySelectorAll('.model-card:not(.empty):not(.add-model)');
-    const preview = document.getElementById('preview');
     const viewBtn = document.getElementById('view-btn');
+    const modelNameText = document.getElementById('model-name');
 
     let selectedModelPath = null;
-    let selectedModelName = null;
 
     modelCards.forEach(card => {
         card.addEventListener('click', () => {
             selectedModelPath = card.dataset.path;
-            selectedModelName = card.dataset.model;
-            preview.innerHTML = `<h2>${selectedModelName}</h2><p>Model Preview</p>`;
+            loadPreviewModel(selectedModelPath);
             viewBtn.disabled = false;
+            modelNameText.textContent = card.dataset.model;
         });
     });
 
     viewBtn.addEventListener('click', () => {
         if (selectedModelPath) {
-            // Pass model path via query param
             window.open(`viewer.html?model=${encodeURIComponent(selectedModelPath)}`, '_blank');
         }
     });
 </script>
-
 </body>
 </html>
