--- a/index.html
+++ b/index.html
@@ -5,86 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Model Selector</title>
     <link rel="stylesheet" href="styles.css" />
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            display: flex;
-            gap: 20px;
-            padding: 20px;
-        }
-        .model-list {
-            display: grid;
-            grid-template-columns: repeat(4, 100px);
-            gap: 10px;
-            overflow-y: auto;
-            max-height: 500px;
-        }
-        .model-card {
-            width: 100px;
-            height: 100px;
-            border: 2px solid #333;
-            border-radius: 12px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            cursor: pointer;
-        }
-        .model-card.empty {
-            background-color: #eee;
-            pointer-events: none;
-        }
-        .model-card.add-model {
-            font-weight: bold;
-            font-size: 18px;
-        }
-        .preview-area {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            border: 2px solid #333;
-            border-radius: 16px;
-            padding: 20px;
-            min-width: 400px;
-        }
-        #preview {
-            flex: 1;
-            text-align: center;
-        }
-        #model-name {
-            font-weight: bold;
-            margin-bottom: 8px;
-            font-size: 18px;
-        }
-        #previewCanvas {
-            width: 100%;
-            height: 300px;
-            display: block;
-            background: #f0f0f0;
-            border-radius: 8px;
-        }
-        #view-btn {
-            margin-top: 20px;
-            padding: 10px;
-            font-size: 16px;
-            border-radius: 8px;
-            border: 2px solid #333;
-            cursor: pointer;
-        }
-        #view-btn:disabled {
-            opacity: 0.5;
-            cursor: not-allowed;
-        }
-    </style>
 </head>
 <body>
 <div class="container">
     <div class="model-list" id="modelList">
         <div class="model-card" data-model="Shiba" data-path="models/shiba.glb">Shiba</div>
         <div class="model-card" data-model="Crab" data-path="models/crab.glb">Crab</div>
+        <div class="model-card" data-model="Lungs" data-path="models/lungs.glb">Lungs</div>
         <!-- Empty cards if needed -->
         <div class="model-card empty"></div>
         <div class="model-card empty"></div>
@@ -257,7 +184,6 @@
     modelNameText.textContent = 'Select a model';
     setupBuiltInModels();
     loadUploadedModels();
-
 </script>
 
 
