--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         <div class="model-card" data-model="Shiba" data-path="models/shiba.glb">Shiba</div>
         <div class="model-card" data-model="Crab" data-path="models/crab.glb">Crab</div>
         <div class="model-card" data-model="Lungs" data-path="models/lungs.glb">Lungs</div>
-        <!-- Empty cards if needed -->
-        <div class="model-card empty"></div>
-        <div class="model-card empty"></div>
+        <div class="model-card" data-model="Lungs" data-path="models/covid.glb">Covid</div>
+
         <!-- Add model button -->
         <button class="model-card add-model" id="add-model-btn">+<br/>Add Model</button>
         <input type="file" id="add-model-input" accept=".glb,.gltf" style="display:none" />
