--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <!-- Predefined model options -->
         <div class="model-card" data-model="Crab" data-path="models/crab.glb">Crab</div>
         <div class="model-card" data-model="Covid" data-path="models/covid.glb">Covid</div>
-        <div class="model-card" data-model="Covid" data-path="models/plantCell.glb">Plant Cell</div>
-        <div class="model-card" data-model="AnimalCell" data-path="models/animalCell.glb">Animal Cell</div>
+        <div class="model-card" data-model="Plant Cell" data-path="models/plantCell.glb">Plant Cell</div>
+        <div class="model-card" data-model="Animal Cell" data-path="models/animalCell.glb">Animal Cell</div>
 
         <!-- Upload button to add custom model -->
         <button class="model-card add-model" id="add-model-btn">+<br/>Add Model</button>
